Fixed alignment of Most Popular Channels Box

--- a/frontend/src/Homepage/Homepage.scss
+++ b/frontend/src/Homepage/Homepage.scss
@@ -225,7 +225,7 @@ flex: row;
     display: inline-block;
     font-family: Neucha, sans-serif;
     font-size: 3rem;
-    line-height: 75px;
+    line-height: 50px;
     outline: none;
     padding: .75rem;
     text-decoration: none;
